--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head> 
 <body class="bg-[#F9FBFE] space-y-10">
+    
+    <header >
+        <div class="2xl:container mx-auto header-bg ">
+            <div class="w-[80%] mx-auto grid grid-cols-1">
+            <div class="flex flex-col items-center justify-center gap-5 h-screen">    
+            <div > <h1 class="font-[Roboto] text-[rgb(245,247,250)] text-[45px] leading-[54px] font-light">Get Delicious Food Anytime</h1></div>
+            <div><p class="font-[Roboto] text-[rgb(245,247,250)] text-[24px] leading-[36px] font-light">Eat Smart & Healthy</p></div>
+            <div class="flex gap-6"><button class="bg-[#C8AB00] text-[rgb(255,255,255)] px-5 py-2 rounded-lg  font-[Roboto] text-[16px] leading-[24px]">View Menu</button>
+                <button class= "border border-[#C8AB00] text-[#C8AB00] px-5 py-2 rounded-lg  font-[Roboto] text-[16px] leading-[24px]">Order Menu</button>
+            </div>
+            </div>
+    </div>
+</div>
+
+
+    </header>
     <!-- Why choose us? -->
 <section>
 
